# profile.mobile.platform.adaptation.spreadtrum.device-manager-plugin-sc7730

./: 61-tizen-video-device.rules  CMakeLists.txt
dump/: dump_power.sh
hw/: shared.c  shared.h  udev.c  udev.h
hw/battery/: CMakeLists.txt  battery.c
hw/display/: CMakeLists.txt  display.c
hw/external_connection/: CMakeLists.txt  external_connection.c
hw/ir/: CMakeLists.txt  ir.c
hw/led/: CMakeLists.txt  led.c
hw/touchscreen/: CMakeLists.txt  touchscreen.c
hw/usb_client/: CMakeLists.txt  usb_client.c  usb_config.h
include/: device_manager_io.h  device_manager_siop.h  devman_define_node_path.h  devman_plugin_intf.h
packaging/: device-manager-plugin-sc7727.spec  device-manager-plugin-sc7730.spec
src/: device_manager_TRM.c  device_manager_TRM.h  device_manager_io.c  device_manager_plugin_sc7727.c  device_manager_siop.c  test_devices.c
